--- a/gleam.toml
+++ b/gleam.toml
@@ -13,7 +13,7 @@ gleam_http = ">= 4.3.0 and < 5.0.0"
 gleam_fetch = ">= 1.0.0 and < 2.0.0"
 gleam_javascript = ">= 1.0.0 and < 2.0.0"
 lustre = ">= 5.0.0 and < 6.0.0"
-squall = { path = "/Users/chadmiller/code/squall" }
+squall = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
